Fix pricing alignments

--- a/static/less/compliance.less
+++ b/static/less/compliance.less
@@ -1,9 +1,5 @@
 .compliance {
   .content {
-    p {
-      color: @gray8;
-    }
-
     table {
       width: calc(~"50% - 20px");
       margin: 20px 20px 0 0;
