--- a/static/less/pricing.less
+++ b/static/less/pricing.less
@@ -74,6 +74,9 @@
   }
 
   .panel {
+    background: none;
+    .box-shadow(none);
+
      > .list-group > .horizontal-list-group-item {
       padding: 10px 98px 10px 10px;
     }
